Change base href

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>AngularCrud</title>
-  <base href="/">
+  <!--All URLs will be rendered relative to the root of
+  the app ie http://localhost/4200/{append_path_here}
+ where href="/" is equal to http://localhost/4200
+Prod  http://serverName/{folder}/{append_path_here}
+and base href="/{folder}/" -->
+  <base href="/emp/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
