Added Create form and import FormsModule to app.module.ts

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
  where href="/" is equal to http://localhost/4200
 Prod  http://serverName/{folder}/{append_path_here}
 and base href="/{folder}/" -->
-  <base href="/emp/">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
